<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/buttonMainS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDesc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:width="330dp"
        android:fontFamily="monospace"
        android:text="@string/desc1"
        android:textColor="#697BE1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHowToUse" />

    <TextView
        android:id="@+id/textViewHowToUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        android:text="@string/howToUse"
        android:textColor="#485CCD"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="330dp"
        android:fontFamily="monospace"
        android:text="@string/desc2"
        android:textColor="#95A3F3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDesc1" />

    <TextView
        android:id="@+id/textViewDesc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="330dp"
        android:fontFamily="monospace"
        android:text="@string/desc3"
        android:textColor="#697BE1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDesc2" />

    <TextView
        android:id="@+id/textViewDesc4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="330dp"
        android:fontFamily="monospace"
        android:text="@string/desc4"
        android:textColor="#95A3F3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDesc3" />

    <TextView
        android:id="@+id/textViewMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="monospace"
        android:text="@string/my_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>