<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextDogName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:rotationX="0"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />

        <RadioGroup
            android:id="@+id/radioGroupDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonToday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/date_today"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonDayC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/date_choose"
                android:textAlignment="center"
                android:textSize="20sp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonNow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/time_now"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButtonTimeC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/time_choose"
                android:textAlignment="center"
                android:textSize="20sp" />

        </RadioGroup>

    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="316dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        tools:layout_editor_absoluteY="153dp" />

    <TimePicker
        android:id="@+id/timepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="130dp"
        android:onClick="onButtonSettings"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@id/calendarView" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="130dp"
        android:onClick="onButtonSave"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSettings"
        app:layout_constraintStart_toEndOf="@+id/buttonHistory"
        app:layout_constraintTop_toBottomOf="@id/calendarView" />

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="130dp"
        android:onClick="setButtonHistory"
        android:text="@string/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

</androidx.constraintlayout.widget.ConstraintLayout>